--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -26,6 +26,9 @@ library
       Day10
       Day11
       Day12
+      Day13
+      Day14
+      Day15
       Util
   other-modules:
       Paths_aoc2022
