--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -35,6 +35,10 @@ library
       Day19
       Day20
       Day21
+      Day22
+      Day23
+      Day24
+      Day25
       Util
   other-modules:
       Paths_aoc2022
